# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_cargo_crate("bindgen") {
  crate_type = "bin"
  crate_root = "main.rs"

  sources = [ "main.rs" ]
  edition = "2018"
  cargo_pkg_version = "0.64.0"
  cargo_pkg_authors = "The rust-bindgen project contributors"
  cargo_pkg_name = "bindgen-cli"
  cargo_pkg_description =
      "Automatically generates Rust FFI bindings to C and C++ libraries."
  deps = [
    "//third_party/rust/crates/bindgen/bindgen:lib",
    "//third_party/rust/crates/clap:lib",
    "//third_party/rust/crates/env_logger:lib",
    "//third_party/rust/crates/log:lib",
    "//third_party/rust/crates/shlex:lib",
  ]
  features = [
    "env_logger",
    "log",
    "logging",
    "static",
    "which-rustfmt",
  ]
}
