# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_cargo_crate("lib") {
    crate_name = "bindgen"
    crate_type = "rlib"
    crate_root = "./lib.rs"

    sources = ["./lib.rs"]
    edition = "2018"
    cargo_pkg_version = "0.64.0"
    cargo_pkg_authors = "Jyun-Yan You <jyyou.tw@gmail.com>,  Emilio Cobos Álvarez <emilio@crisal.io>,  Nick Fitzgerald <fitzgen@gmail.com>,  The Servo project developers"
    cargo_pkg_name = "bindgen"
    cargo_pkg_description = "Automatically generates Rust FFI bindings to C and C++ libraries."
    deps = [
        "//third_party/rust/crates/bitflags:lib",
        "//third_party/rust/crates/rust-cexpr:lib",
        "//third_party/rust/crates/clang-sys:lib",
        "//third_party/rust/crates/lazy-static.rs:lib",
        "//third_party/rust/crates/lazycell:lib",
        "//third_party/rust/crates/log:lib",
        "//third_party/rust/crates/peeking_take_while:lib",
        "//third_party/rust/crates/proc-macro2:lib",
        "//third_party/rust/crates/quote:lib",
        "//third_party/rust/crates/regex:lib",
        "//third_party/rust/crates/rustc-hash:lib",
        "//third_party/rust/crates/shlex:lib",
        "//third_party/rust/crates/syn:lib",
        "//third_party/rust/crates/which-rs:lib",
    ]
    features = [
        "cli",
        "experimental",
        "log",
        "logging",
        "static",
        "which",
        "which-rustfmt",
    ]
    build_root = "build.rs"
    build_sources = ["build.rs"]
    build_script_outputs = ["host-target.txt"]
}
